--- a/OnlineVotingSystem/Views/Home/Contact.cshtml
+++ b/OnlineVotingSystem/Views/Home/Contact.cshtml
@@ -6,14 +6,14 @@
     <h3>@ViewBag.Message</h3>
 
     <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
+        Hyderabad<br />
+        Sr Nagar, TG-500038<br />
+        <abbr title="Phone">Ph:</abbr>
+        998-551-6142
     </address>
 
     <address>
-        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        <strong>Support:</strong>   <a href="mailto:koti40565@gmail.com">Support@example.com</a><br />
+        
     </address>
 </main>
