--- a/OnlineVotingSystem/Views/Account/Login.cshtml
+++ b/OnlineVotingSystem/Views/Account/Login.cshtml
@@ -1,22 +1,34 @@
 ﻿@model OnlineVotingSystem.Models.User
 @{
     ViewBag.Title = "Login";
+    var error = ViewBag.Error as string;
 }
 
-<h2>Login</h2>
+<div class="container mt-5 d-flex justify-content-center">
+    <div class="card shadow p-4" style="min-width: 350px; max-width: 400px; width: 100%;">
+        <h2 class="text-center mb-4">Login</h2>
 
-@using (Html.BeginForm("Login", "Account", FormMethod.Post))
-{
-    <div>
-        @Html.LabelFor(m => m.Username)
-        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-    </div>
-    <div>
-        @Html.LabelFor(m => m.Password)
-        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Login</button>
+        @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+        {
+            <div class="form-group mb-3">
+                @Html.LabelFor(m => m.Username)
+                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter username" })
+            </div>
 
-    <p style="color:red">@ViewBag.Error</p>
-}
+            <div class="form-group mb-3">
+                @Html.LabelFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Enter password" })
+            </div>
+
+            <div class="text-start">
+                @* 👈 Aligns button to left *@
+                <button type="submit" class="btn btn-primary w-50">Login</button>
+            </div>
+        }
+
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <p class="text-danger mt-3">@error</p>
+        }
+    </div>
+</div>
