--- a/OnlineVotingSystem/Views/Shared/_Layout.cshtml
+++ b/OnlineVotingSystem/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+
     <style>
         html, body {
             height: 100%;
@@ -27,18 +30,19 @@
     <div class="wrapper">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Voting Application", "Index", "Home", null, new { @class = "navbar-brand" })
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+
                     </ul>
                 </div>
             </div>
